chore: switch back to POW

--- a/conf/miner3.env
+++ b/conf/miner3.env
@@ -2,4 +2,4 @@ WEB_ADDR="0.0.0.0:5000"
 WEB_PRIVATE_ADDR="0.0.0.0:5040"
 BENEFICIARY="miner3"
 DB_PATH="data/miner3/"
-CONSENSUS="POA"
+CONSENSUS="POW"
