--- a/conf/miner2.env
+++ b/conf/miner2.env
@@ -2,4 +2,4 @@ WEB_ADDR="0.0.0.0:4000"
 WEB_PRIVATE_ADDR="0.0.0.0:4040"
 BENEFICIARY="miner2"
 DB_PATH="data/miner2/"
-CONSENSUS="POA"
+CONSENSUS="POW"
